--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "transformers-gradio"
+name = "diffusers-gradio"
 version = "0.0.1"
-description = "A Python package for creating Gradio applications with Transformers models"
+description = "A Python package for creating Gradio applications with Diffusers models"
 authors = [
     { name = "AK", email = "ahsen.khaliq@gmail.com" }
 ]
@@ -18,22 +18,23 @@ classifiers = [
 ]
 dependencies = [
     "gradio>=5.5.0",
-    "transformers @ git+https://github.com/huggingface/transformers.git",
-    "bitsandbytes",
-    "accelerate",
-    "optimum",
-    "Pillow",
+    "transformers",
+    "diffusers",
+    "peft",
+    "opencv-python",
+    "protobuf",
+    "sentencepiece",
 ]
 
 [project.urls]
-homepage = "https://github.com/AK391/transformers-gradio"
-repository = "https://github.com/AK391/transformers-gradio"
+homepage = "https://github.com/AK391/diffusers-gradio"
+repository = "https://github.com/AK391/diffusers-gradio"
 
 [project.optional-dependencies]
 dev = ["pytest"]
 
 [tool.hatch.build.targets.wheel]
-packages = ["transformers_gradio"]
+packages = ["diffusers_gradio"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
